--- a/AssignmentZero/AssignmentZero/AssignmentZero.vcxproj
+++ b/AssignmentZero/AssignmentZero/AssignmentZero.vcxproj
@@ -47,6 +47,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(OPENCV_DIR)build\include;$(BOOST_DIR);$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(OPENCV_DIR)build\x86\vc12\lib;$(BOOST_DIR)lib32-msvc-12.0;</LibraryPath>
+    <SourcePath>$(VC_SourcePath);$(OPENCV_DIR)sources\modules\core\src;$(OPENCV_DIR)sources\modules\imgproc\src;$(OPENCV_DIR)sources\modules\highgui\src;</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -77,6 +80,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opencv_core249d.lib;opencv_highgui249d.lib;opencv_imgproc249d.lib;opencv_calib3d249d.lib;opencv_contrib249d.lib;OpenGL32.lib;Glu32.lib;boost_filesystem-vc120-mt-gd-1_57.lib;boost_regex-vc120-mt-gd-1_57.lib;boost_system-vc120-mt-gd-1_57.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
