--- a/Assignment1/Assignment1/Assignment1.vcxproj
+++ b/Assignment1/Assignment1/Assignment1.vcxproj
@@ -83,6 +83,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Main.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
